🏗️ fix on tab effect on mobiles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,10 @@
-.font-quranic {
-  font-family: 'KFGQPC Uthman Taha Naskh', sans-serif;
-}
-
-.none-tab-effect {
+* {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
-.noSelect:focus {
-  outline: none !important;
+
+.font-quranic {
+  font-family: 'KFGQPC Uthman Taha Naskh', sans-serif;
 }
 
 body {
